fix plans and questions on mobile

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -694,7 +694,13 @@
 
   &--6 {
     // height: 97.5rem;
+    padding-left: 20rem;
+    padding-right: 20rem;
 
+    @include breakpointMax(xmedium) {
+      padding-left: 7rem;
+      padding-right: 7rem;
+    }
     @include breakpointMax(medium) {
       padding-left: 3rem;
       padding-right: 3rem;
@@ -707,6 +713,18 @@
       margin: 4rem 0 4rem 0;
     }
 
+    .plan-container {
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      column-gap: 1rem;
+      display: none;
+
+      @include breakpointMax(xmedium) {
+        display: flex;
+        flex-direction: column;
+      }
+    }
+
     ///////////////////////// table
 
     .table {
@@ -714,6 +732,10 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
+
+      @include breakpointMax(xmedium) {
+        display: none;
+      }
     }
 
     .row {
@@ -801,6 +823,123 @@
         }
       }
     }
+
+    .user-icon {
+      width: 15rem;
+      height: 15rem;
+      &__box {
+        width: 100%;
+        height: 21rem;
+        @include flex-center;
+        background-color: #44a9ff;
+        // background-color: #FFD400;
+      }
+    }
+
+    .plan {
+      background-color: #007feb;
+      // background-color: #FDBA12;
+      width: 100%;
+      height: 7rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 0 3rem;
+      cursor: pointer;
+      z-index: 100;
+      transition: height 0.4s;
+
+      &-box {
+        display: flex;
+        flex-direction: column;
+
+        &:not(:last-child) {
+          margin-top: 4rem;
+        }
+
+        @include breakpointMax(xmedium) {
+          margin-top: 4rem;
+        }
+        @include breakpointMax(small) {
+          width: 100%;
+        }
+      }
+
+      &__name {
+        font-family: $gpBold;
+        font-weight: 700;
+        font-size: 2rem;
+        width: 100%;
+        text-align: center;
+        color: white;
+
+        &::selection {
+          user-select: none;
+        }
+
+        @include breakpointMax(xmedium) {
+          font-size: 2rem;
+        }
+      }
+
+      &__icon {
+        width: 3rem;
+        height: 1.7rem;
+        transition: all 0.3s ease-in-out;
+        &--closed {
+          fill: #e2ecf5;
+          transform: rotate(180deg);
+        }
+      }
+    }
+
+    .feature {
+      width: 100%;
+      height: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      background-color: #e2ecf5;
+      z-index: 10;
+      overflow: hidden;
+      transition: height 0.4s, padding-top 0.4s, padding-bottom 0.4s,
+        padding-left 0s, padding-right 0s;
+      display: flex;
+      flex-direction: column;
+
+      &__row {
+        display: grid;
+        grid-template-columns: min-content 1fr;
+
+        align-items: center;
+
+        &:not(:last-child) {
+          margin-bottom: 2rem;
+        }
+      }
+
+      &__text {
+        display: block;
+        font-family: $gpLight;
+        font-weight: 300;
+        line-height: 1.3;
+        font-size: 1.4rem;
+        z-index: 10;
+        transition: all 0.4s 0.4s;
+      }
+    }
+
+    .icon-check {
+      width: 2.6rem;
+      height: 2rem;
+      margin: 0 1rem;
+    }
+
+    .icon-not {
+      width: 2rem;
+      height: 2rem;
+      margin: 0 1.3rem;
+    }
   }
 
   &--7 {
@@ -826,7 +965,6 @@
     &__info-box {
       width: 100%;
     }
-
     .question {
       width: 100%;
       height: 7rem;
@@ -844,8 +982,7 @@
       }
 
       &s-box {
-        @include flex-center;
-        // width: 100rem;
+        display: flex;
         flex-direction: column;
         margin-top: 10rem;
 
@@ -890,7 +1027,7 @@
 
       &__text {
         display: block;
-        font-family: $gpLight;
+        // font-family: $gpLight;
         line-height: 1.3;
         font-size: 1.8rem;
         z-index: 10;
@@ -1065,7 +1202,7 @@
   }
 
   &--big {
-    width: 87rem;
+    // width: 87rem;
     grid-column: 1 / 4;
 
     @include breakpointMax(xmedium) {
@@ -1074,7 +1211,7 @@
     }
   }
   &--small {
-    width: 27rem;
+    // width: 27rem;
 
     @include breakpointMax(xmedium) {
       width: 90%;
