--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -296,7 +296,11 @@
     // width: 100%;
     height: 6vh;
     align-self: start;
-    @include flex-center;
+    display: none;
+
+     @include breakpointMax(xmedium) {
+      @include flex-center;
+    }
   }
 }
 
@@ -314,7 +318,6 @@
   @include breakpointMax(xmedium) {
     // margin-top: 1rem;
     display: block;
-    grid-column: 3 / 4;
   }
 }
 
